# quantcontext-mcp-server

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml  refresh-fundamentals.yml  seed-cache.yml
docs/: architecture.md  examples.md  registry-submissions.md  tools.md
docs-site/: architecture.mdx  custom.css  introduction.mdx  llms.txt  methodology.mdx  mint.json  quickstart.mdx
docs-site/examples/: full-workflow.mdx  momentum-strategy.mdx  value-stocks.mdx
docs-site/tools/: backtest-strategy.mdx  factor-analysis.mdx  screen-stocks.mdx
eval/: connections.py  eval_quantcontext.xml  evaluation.py
landing/: package-lock.json  package.json
landing/app/: globals.css  page.tsx
landing/app/api/data/[file]/: route.ts
landing/components/: conversation-demo.tsx  footer.tsx  hero.tsx  hosted-teaser.tsx  install-section.tsx  nav.tsx  pipeline-demo.tsx  tools-grid.tsx
scripts/: generate_seed_cache.py  refresh_fundamentals.py
src/quantcontext/: __init__.py  server.py
src/quantcontext/data/: ff_factors.csv  fundamentals_seed.json  nasdaq100_tickers.json  sp500_tickers.json
src/quantcontext/engine/: backtest_engine.py  data.py  factor_analysis.py  pipeline_executor.py
src/quantcontext/engine/skills/pipeline_skills/: __init__.py  factor_model.py  fundamental_screen.py  mean_reversion.py  momentum_screen.py  quality_screen.py  registry.py  technical_signal.py  value_screen.py
tests/: conftest.py  test_tools.py
