[project]
name = "quantcontext-mcp"
version = "0.1.1"
description = "MCP server for trade research and strategy backtesting. Deterministic quant tools for AI agents — stock screening, backtesting, and factor analysis."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Zomma", email = "hello@zommalabs.com" },
]
keywords = ["mcp", "trading", "quant", "backtest", "factor-analysis", "ai-agent", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "yfinance>=0.2",
    "scipy>=1.10",
    "pydantic>=2.0",
]

[project.scripts]
quantcontext = "quantcontext.server:main"
quantcontext-warmup = "quantcontext.engine.data:warmup_main"

[project.urls]
Homepage = "https://quantcontext.ai"
Repository = "https://github.com/zomma-dev/quantcontext-mcp-server"
Documentation = "https://quantcontext.ai/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantcontext"]
exclude = [
    "src/quantcontext/engine/.cache",
]
